<resources>
    <string name="app_name">MS QUIZ APP</string>
    <string name="play_game">Play Game</string>
    <string name="quit">Exit</string>
    <string name="next">Next</string>
    <string name="cancel">✖</string>
    <string name="question">Question</string>
    <string name="play_again">Play again</string>
    <string name="time">20</string>
    <string name="correct">Correct</string>
    <string name="wrongans">Wrong Answer !</string>
    <string name="timeup">Time Up</string>
    <string name="share">Share</string>
</resources>