<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <ImageView
                android:id="@+id/coinImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_attach_money_black_24dp" />

            <TextView
                android:id="@+id/coinText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/coinImage"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/QuizText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/timeText"
                android:layout_toRightOf="@+id/coinText"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/time"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@drawable/quiz_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        >


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/buttonA"
            android:layout_margin="5dp"
            android:onClick="buttonA"
            android:text=""
            android:textAllCaps="false"
            android:background="@drawable/white_option_bg"
            android:textColor="@color/grey"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_option_bg"
            android:id="@+id/buttonB"
            android:layout_margin="5dp"
            android:onClick="buttonB"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/grey" />


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_option_bg"
            android:id="@+id/buttonC"
            android:layout_margin="5dp"
            android:onClick="buttonC"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_option_bg"
            android:id="@+id/buttonD"
            android:layout_margin="5dp"
            android:onClick="buttonD"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/grey" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>
